--- a/agentfox.ini
+++ b/agentfox.ini
@@ -1,10 +1,10 @@
 [YaraRulesPath]
 value=True
-path=r\
+path=yara\
 [ProcessScan]
 value=True
 [IOC]
 value=True
 path=ioc
 [ScaningPath]
-path=C:\Users\DTAsia\yara\files\
+path=path\to\directory\
